# mirrors

./: README.md  mongoose-5.1.tgz
gneural_network-0.9.1/: AUTHORS  Makefile.am  Makefile.in  NEWS  README  THANKS  configure  configure.ac
gneural_network-0.9.1/doc/: README
gneural_network-0.9.1/include/: activation.h  binom.h  defines.h  error.h  fact.h  feedforward.h  genetic_algorithm.h  gradient_descent.h  includes.h  load.h  msmco.h  network.h  parser.h  random_search.h  randomize.h  rnd.h  save.h  simulated_annealing.h
gneural_network-0.9.1/src/: Makefile  Makefile.am  Makefile.in  activation.c  binom.c  error.c  fact.c  feedforward.c  genetic_algorithm.c  gneural_network.c  gradient_descent.c  load.c  msmco.c  network.c  parser.c  random_search.c  randomize.c  rnd.c  save.c  simulated_annealing.c
gneural_network-0.9.1/src/.deps/: gneural_network.Po
gneural_network-0.9.1/tests/: curve_fitting_quadratic_function.input  curve_fitting_square_root.input  invert_order.input  modulus_of_two_dimensional_vectors.input
lsh-2.1/: .bootstrap  ANNOUNCE  AUTHORS  ChangeLog  ChangeLog.1  ChangeLog.2  FAQ  Makefile.am  Makefile.in  NEWS  README  config.h.in  configure  configure.ac
lsh-2.1/contrib/: Makefile.am  Makefile.in  README  lsh.spec  lsh.spec.in  lshd.debian.init  lshd.rhlinux.init  solpkg.sh.in
lsh-2.1/doc/: DSA.5  HACKING  Makefile.am  Makefile.in  NOTES  PORTS  SHA.5  SPKI.5  TASKLIST  TODO  configuration.txt  fixff.pl  fixff.sh  gateway-mode.txt  lsh-authorize.1  lsh-decode-key.1  lsh-decrypt-key.1  lsh-export-key.1  lsh-keygen.1  lsh-make-seed.1  lsh-upgrade-key.1  lsh-upgrade.1  lsh-writekey.1  lsh.1  lsh.html  lsh.info  lsh.texinfo  lshd.8  lshg.1  secsh.5  srp-spec.nroff  srp-spec.txt  ssh-conv.1
lsh-2.1/misc/: Makefile.am  Makefile.in  make-am  make-dist  tsocks-forcelocal.patch
lsh-2.1/src/: .dist_classes  .dist_headers  Makefile.am  Makefile.in  abstract_crypto.c  abstract_crypto.h  abstract_crypto.h.x  abstract_io.c  abstract_io.h  abstract_io.h.x  algorithms.c  algorithms.h  algorithms.h.x  alist.c  alist.c.x  alist.h  alist.h.x  atoms.c  atoms.h  atoms.in  atoms_defines.h  atoms_gperf.c  atoms_table.c  channel.c  channel.c.x  channel.h  channel.h.x  channel_commands.c  channel_commands.c.x  channel_commands.h  channel_commands.h.x  channel_forward.c  channel_forward.h  charset.c  charset.h  client.c  client.c.x  client.h  client.h.x  client_escape.c  (+235 more)
lsh-2.1/src/argp/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
lsh-2.1/src/argp/testsuite/: Makefile.in
lsh-2.1/src/rsync/: Makefile.am  Makefile.in  README  checksum.c  generate.c  receive.c  rsync.h  send.c
lsh-2.1/src/scm/: Makefile.am  Makefile.in  compiler.scm  gaba.scm  guile-compat.scm  scsh-compat.scm
lsh-2.1/src/sftp/: ChangeLog  Makefile.am  Makefile.in  acinclude.m4  buffer.c  buffer.h  client.c  client.h  commands.c  commands.h  config.h.in  configure  configure.ac  dc.c  dc.h  dump-hex.c  filemode.c  filemode.h  gnu_stuff.c  gnu_stuff.h  idcache.c  io.h  io_input.c  io_output.c  lsftp.1  lsftp.c  lsftp.h  misc_fun.c  misc_fun.h  rl.c  rl.h  sftp-server.8  sftp-server.c  sftp-test-client.c  sftp.h  sftp_bind.c  sftp_bind.h  sftp_c.c  sftp_c.h  str_utils.c  (+4 more)
lsh-2.1/src/sftp/testsuite/: Makefile.in  get-1-test  ls-1-test  ls-2-test  put-1-test
lsh-2.1/src/spki/: ChangeLog  Makefile.am  Makefile.in  README  TODO  certificate.c  certificate.h  config.h.in  configure  configure.ac  names.c  parse-transport.c  parse.c  parse.h  process-types  reduce.c  spki-gperf.h  spki-type-names.h  spki-types.h  spki-types.in  tag.c  tag.h  verify.c
lsh-2.1/src/spki/testsuite/: .dist_cdsa  Makefile.am  Makefile.in  cdsa-reduce-test.c  check-signature-test  date-test.c  delegate-test  key-1  key-1.pub  key-2  key-2.pub  lookup-acl-test.c  make-signature-test  principal-test.c  read-acl-test.c  read-cert-test.c  reduce-test  setup-env  tag-test.c  testutils.c  testutils.h
lsh-2.1/src/spki/testsuite/cdsa-cases/: 1.in  1.out  10.in  10.out  1000.in  11.in  11.out  12.in  13.in  14.in  15.in  16.in  17.in  18.in  19.in  19.out  2.in  20.in  20.out  21.in  22.in  22.out  23.in  24.in  25.in  26.in  27.in  28.in  28.out  29.in  3.in  3.out  30.in  30.out  31.in  31.out  32.in  33.in  33.out  34.in  (+102 more)
lsh-2.1/src/spki/tools/: Makefile.am  Makefile.in  misc.c  misc.h  sign.c  sign.h  spki-check-signature.c  spki-delegate.c  spki-make-signature.c  spki-reduce.c
lsh-2.1/src/testsuite/: .dist_rapid7  Makefile.am  Makefile.in  aes-test.c  arcfour-test.c  blowfish-test.c  cast128-test.c  conv-1-test  conv-2-test  conv-3-test  daemon-fd-test  des-test.c  dsa-test.c  export-1-test  functions.sh  key-1.private  key-2.private  keygen-1-test  keygen-2-test  lcp-test  login-auth-test  lsh-1-test  lsh-2-test  lsh-3-test  lsh-4-test  lsh-5-test  lsh-6-test  lsh-7-test  lsh-8-test  lsh-9-test  lsh-cat-test  lsh-decrypt-key-test  lsh-encrypted-key-test  lshd-no-auth-test  lshd-random-input-test  lshg-1-test  lshg-cat-2-test  lshg-cat-test  lshg-tcpip-local-test  md5-test.c  (+24 more)
lsh-2.1/src/testsuite/rapid7-ssh-pdu/: 0000001.pdu  0000002.pdu  0000003.pdu  0000004.pdu  0000005.pdu  0000006.pdu  0000007.pdu  0000008.pdu  0000009.pdu  0000011.pdu  0000012.pdu  0000013.pdu  0000014.pdu  0000015.pdu  0000016.pdu  0000017.pdu  0000018.pdu  0000019.pdu  0000020.pdu  0000021.pdu  0000022.pdu  0000023.pdu  0000024.pdu  0000025.pdu  0000026.pdu  0000027.pdu  0000028.pdu  0000029.pdu  0000030.pdu  0000031.pdu  0000032.pdu  0000033.pdu  0000034.pdu  0000035.pdu  0000036.pdu  0000037.pdu  0000038.pdu  0000039.pdu  0000040.pdu  0000041.pdu  (+611 more)
